# open_research

./: .gitignore  README.md  research_config.yaml.example  tmp.md
backend/: pyproject.toml
backend/research_engine/: __init__.py  __main__.py  config.py  main.py  models.py  schemas.py
backend/research_engine/paper_collectors/: __init__.py  base.py  runner.py
backend/research_engine/paper_collectors/sources/: __init__.py  arxiv.py  semantic_scholar.py
backend/research_engine/prompts/: __init__.py  deep_analysis.py  direction_expansion.py  feasibility_ranking.py  idea_generation.py
backend/research_engine/services/: events.py  knowledge_base.py  llm.py  output.py  pipeline.py  retry.py
backend/research_engine/stages/: __init__.py  base.py  s1_direction_expansion.py  s2_frontier_scan.py  s3_idea_discovery.py  s4_feasibility_ranking.py  s5_deep_analysis.py
backend/tests/: conftest.py  test_paper_collectors.py  test_pipeline.py  test_stages.py
knowledge/: existing_ideas.md  existing_research.md
